# OCR_with_format

./: .gitignore  README.md  __init__.py  __main__.py  bumpver.toml  pyproject.toml  requirements.txt  setup.py
OCR_with_format/: __init__.py  ocr_with_format.py
src/OCR_with_format/: __init__.py  ocr_with_format.py
